max speed up with avx256

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,8 @@
     "type_traits": "cpp",
     "utility": "cpp",
     "iostream": "cpp",
-    "filesystem": "cpp"
+    "filesystem": "cpp",
+    "random": "cpp",
+    "algorithm": "cpp"
   }
 }
