fix the time measure error, add openmp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,6 +13,11 @@
     "iostream": "cpp",
     "filesystem": "cpp",
     "random": "cpp",
-    "algorithm": "cpp"
+    "algorithm": "cpp",
+    "*.tcc": "cpp",
+    "string": "cpp",
+    "string_view": "cpp",
+    "iterator": "cpp",
+    "vector": "cpp"
   }
 }
