--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,5 +2,5 @@ add_subdirectory(hello)
 
 add_subdirectory(max)
 add_subdirectory(comm)
-# add_subdirectory(sum)
+add_subdirectory(sum)
 # add_subdirectory(sort)
