--- a/src/max/CMakeLists.txt
+++ b/src/max/CMakeLists.txt
@@ -2,7 +2,7 @@ project(MAX)
 
 # aux_source_directory(. max_src)
 
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx512f -fabi-version=6 -DEIGEN_ENABLE_AVX512")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mavx")
 
 FIND_PACKAGE( OpenMP REQUIRED)
 
