--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,4 +3,4 @@ add_subdirectory(hello)
 add_subdirectory(max)
 add_subdirectory(comm)
 add_subdirectory(sum)
-# add_subdirectory(sort)
+add_subdirectory(sort)
