--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,6 +18,9 @@
     "string": "cpp",
     "string_view": "cpp",
     "iterator": "cpp",
-    "vector": "cpp"
+    "vector": "cpp",
+    "*.ipp": "cpp",
+    "fstream": "cpp",
+    "locale": "cpp"
   }
 }
