--- a/src/comm/CMakeLists.txt
+++ b/src/comm/CMakeLists.txt
@@ -10,11 +10,11 @@ file(GLOB CXX_SRC
   comm_manager.hpp
 )
 
-add_library(comm_lib STATIC ${CXX_SRC})
-target_link_libraries(comm_lib pthread)
+add_library(comm_LIB STATIC ${CXX_SRC})
+target_link_libraries(comm_LIB pthread)
 
 add_executable(server server.cpp)
-target_link_libraries(server comm_lib)
+target_link_libraries(server comm_LIB)
 
 add_executable(client client.cpp)
-target_link_libraries(client comm_lib)
+target_link_libraries(client comm_LIB)
